@@ -15,6 +15,8 @@ $Id$
 6.5.0 Beta 4
 ============
 
+* [DanielPharos]: Made an option to set the amount of lines of text in the console.
+
 * [DanielPharos]: Fixed the duplicators to export correctly again and the map portals not drawing anymore.
 
 * [cdunde]: Added many new beizer shapes and functions developed by our friends in Russia,
